--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply from: 'dependencies/dependencies.gradle'
 buildscript {
-    ext.kotlin_version = '1.3.72'
-    ext.navigationVersion = '2.2.0-rc02'
     repositories {
         mavenCentral()
         google()
@@ -10,12 +7,12 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$Version.kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$Version.navigationVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // in the individual module build.gradle.kts files
     }
 }
 
